<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/cardview_dark_background"
    android:alpha="0.9"
    tools:context="umn.ac.id.ProfileActvity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="175dp"
            android:src="@drawable/aldo"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/nim"
            android:textColor="#FFFFFF"/>
        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/nimdeveloper"
            android:textColor="#FFFFFF"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/nama"
            android:textColor="#FFFFFF"/>
        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/namadeveloper"
            android:textColor="#FFFFFF"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/kelas"
            android:textColor="#FFFFFF"/>
        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/kodekelas"
            android:textColor="#FFFFFF"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="60dp"
        android:gravity="center_horizontal|center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="37dp"
            android:gravity="center"
            android:text="@string/referensi"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:textSize="12sp"
                android:text="YouTube : https://www.youtube.com/watch?v=tlOGecRQeOo"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:textSize="12sp"
                android:text="YouTube : https://www.youtube.com/watch?v=BfrIFVsvUzI"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:textSize="12sp"
                android:text="YouTube : https://www.youtube.com/watch?v=Bsm-BlXo2SI"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:textSize="12sp"
                android:text="developer.android.com"
                android:textColor="@color/white"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>