<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@mipmap/music3"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    tools:context="umn.ac.id.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="262dp"
            android:layout_height="109dp"
            android:src="@drawable/mymusic" />
    </LinearLayout>

    <TextView
        android:layout_width="436dp"
        android:layout_height="66dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/name_music"
        android:textColor="#C71585"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/shape_uname"
        android:drawableStart="@drawable/ic_person_black_24dp"
        android:drawablePadding="10dp"
        android:hint="@string/enter_name"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/shape_uname"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:drawablePadding="10dp"
        android:hint="@string/input_text_hint"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:inputType="textPassword"
        android:textColorHint="@color/black" />
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Login"
        android:shadowColor="@android:color/transparent"
        android:padding="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/shape_login"/>

    <TextView
        android:id="@+id/tvAttempts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attempts_remaining_5"
        android:background="@drawable/shape_login2"/>
</LinearLayout>